unpackaged/main/default/objects/CMPL123CME__MDR__c/CMPL123CME__MDR__c.object-meta.xml
<CustomObject>
    <label>MDR</label>
    <nameField>
        <displayFormat>MDR-{00000}</displayFormat>
        <label>SL No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MDR</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>