unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__A_NDA_No__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__A_NDA_No__c</fullName>
        <description>(A)NDA No</description>
        <label>(A)NDA No</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>