unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__AASR_MDR__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__AASR_MDR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AASR MDR</label>
        <referenceTo>CMPL123CME__MDR__c</referenceTo>
        <relationshipLabel>IASR</relationshipLabel>
        <relationshipName>AASR_MDR</relationshipName>
        <type>Lookup</type>
    </CustomField>