unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__ACK1CoreID__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__ACK1CoreID__c</fullName>
        <description>Message Core ID generated by FDA. First response ti submission.</description>
        <label>ACK1 CoreID</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>