unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__ACK1PassMessage__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__ACK1PassMessage__c</fullName>
        <description>Pass message from FDA</description>
        <label>ACK1 Pass Message</label>
        <length>32768</length>
        <type>Html</type>
    </CustomField>