unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__ACK1ReceivedDate__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__ACK1ReceivedDate__c</fullName>
        <description>Date Time when message was received by FDA first time.</description>
        <label>ACK1 Received Date</label>
        <type>DateTime</type>
    </CustomField>