unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__ACK1RejectMessage__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__ACK1RejectMessage__c</fullName>
        <description>Reject message from FDA, if exists one.</description>
        <label>ACK1 Reject Message</label>
        <length>32768</length>
        <type>Html</type>
    </CustomField>