unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__ACK3_Date_Failure__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__ACK3_Date_Failure__c</fullName>
        <description>ACK3 Date Failure</description>
        <label>ACK3 Date Failure</label>
        <type>Date</type>
    </CustomField>