unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Addtl_Mfg_Narrative__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Addtl_Mfg_Narrative__c</fullName>
        <label>Addtl Mfg Narrative</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>