unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Adverse_Event_Product_Problem__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Adverse_Event_Product_Problem__c</fullName>
        <description>Adverse Event/Product Problem</description>
        <label>Adverse Event/Product Problem</label>
        <type>TextArea</type>
    </CustomField>