unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__AdverseEvent_ProductProblem__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__AdverseEvent_ProductProblem__c</fullName>
        <description>Adverse Event/Product Problem</description>
        <inlineHelpText>Adverse Event/Product Problem</inlineHelpText>
        <label>Adverse Event/Product Problem</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adverse Event</fullName>
                </value>
                <value>
                    <fullName>Product Problem(Eg.defects/malfunctions)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>