unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Advrese_Event_Term__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Advrese_Event_Term__c</fullName>
        <inlineHelpText>Advrese Event Term(s)</inlineHelpText>
        <label>Adverse Event Term(s)</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>