unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Age_Units_Patient__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Age_Units_Patient__c</fullName>
        <description>Age Units (Patient)</description>
        <label>Age Units (Patient)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Years</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>