unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Approximate_age_of_device__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Approximate_age_of_device__c</fullName>
        <description>Approximate age of device</description>
        <label>Approximate age of device</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>