unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__AS2MessageID__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__AS2MessageID__c</fullName>
        <description>AS2 Message ID that was generated by our submission system for a message that sent to FDA.</description>
        <label>AS2 Message ID</label>
        <length>60</length>
        <type>Text</type>
    </CustomField>