unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__ASR_Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__ASR_Type__c</fullName>
        <label>ASR Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AASR</fullName>
                </value>
                <value>
                    <fullName>IASR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>