unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Assigned_To__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MDR_Assigned</relationshipName>
        <type>Lookup</type>
    </CustomField>