unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Brand_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Brand_Name__c</fullName>
        <description>Brand Name</description>
        <label>Brand Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>