unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Comination_Product__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Comination_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Comination Product</description>
        <label>Combination Product</label>
        <type>Checkbox</type>
    </CustomField>