unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Comitant_Medical_Prod__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Comitant_Medical_Prod__c</fullName>
        <description>Comitant Medical Prod</description>
        <label>Concomitant Medical Prod</label>
        <type>TextArea</type>
    </CustomField>