unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Common_Device_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Common_Device_Name__c</fullName>
        <description>Common Device Name</description>
        <label>Common Device Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>