unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Concomitant_Med_Prod__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Concomitant_Med_Prod__c</fullName>
        <description>Concomitant Medical Product</description>
        <inlineHelpText>Concomitant Medical Product</inlineHelpText>
        <label>Concomitant Medical Prod</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>