unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Concomitant_Medical_Prod__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Concomitant_Medical_Prod__c</fullName>
        <description>Concomitant Medical Products And Therapy Dates (Exclude treatment of event)</description>
        <inlineHelpText>Concomitant Medical Products And Therapy Dates (Exclude treatment of event)</inlineHelpText>
        <label>Concomitant Medical Products</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>