unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Concomittant_Products__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Concomittant_Products__c</fullName>
        <label>Concomitant Products</label>
        <type>TextArea</type>
    </CustomField>