unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Contact_Office__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Contact_Office__c</fullName>
        <label>Contact Office</label>
        <type>TextArea</type>
    </CustomField>