unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Contact_Person__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Contact_Person__c</fullName>
        <label>Contact Person</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>