unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Correction_Data__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Correction_Data__c</fullName>
        <description>Correction Data</description>
        <label>Correction Data</label>
        <type>TextArea</type>
    </CustomField>