unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Correction_Removal_Report_No__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Correction_Removal_Report_No__c</fullName>
        <description>Correction/Removal Report No</description>
        <inlineHelpText>If action reported to FDA under 21 USC 360i(f) list Correction/Removal Report No</inlineHelpText>
        <label>Correction/Removal Report No</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>