unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__CorrectionData__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__CorrectionData__c</fullName>
        <description>Correction Data</description>
        <inlineHelpText>Correction Data</inlineHelpText>
        <label>Correction Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>