unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__D3_Manufacturer_of_Suspect_Device__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D3_Manufacturer_of_Suspect_Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>D3 Manufacturer of Suspect Device</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MDR (D3 Manufacturer of Suspect Device)</relationshipLabel>
        <relationshipName>MDR5</relationshipName>
        <type>Lookup</type>
    </CustomField>