unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__D9_Reprocessor__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D9_Reprocessor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>D9 Reprocessor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MDR (D9 Reprocessor)</relationshipLabel>
        <relationshipName>MDR7</relationshipName>
        <type>Lookup</type>
    </CustomField>