unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Date_facility_dist_was_aware__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Date_facility_dist_was_aware__c</fullName>
        <description>Date facility/dist was aware</description>
        <label>Date facility/dist was aware</label>
        <type>Date</type>
    </CustomField>