unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Date_of_Death__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Date_of_Death__c</fullName>
        <description>Date of Death</description>
        <label>Date of Death</label>
        <type>DateTime</type>
    </CustomField>