unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Date_of_Event__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Date_of_Event__c</fullName>
        <label>Date of Event</label>
        <type>Date</type>
    </CustomField>