unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Date_of_Submission_MDN__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Date_of_Submission_MDN__c</fullName>
        <description>Date of Submission (MDN)</description>
        <label>Date of Submission (MDN)</label>
        <type>Date</type>
    </CustomField>