unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Date_of_this_Report__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Date_of_this_Report__c</fullName>
        <description>Date of this Report</description>
        <label>Date of this Report</label>
        <type>Date</type>
    </CustomField>