unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Date_received_by_MFG__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Date_received_by_MFG__c</fullName>
        <description>Date received by MFG</description>
        <label>Date received by Mfg</label>
        <type>Date</type>
    </CustomField>