unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Date_report_sent_to_FDA__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Date_report_sent_to_FDA__c</fullName>
        <description>Date report sent to FDA</description>
        <label>Date report sent to FDA</label>
        <type>Date</type>
    </CustomField>