unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Date_report_sent_to_MFG__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Date_report_sent_to_MFG__c</fullName>
        <description>Date report sent to MFG</description>
        <label>Date report sent to Mfg</label>
        <type>Date</type>
    </CustomField>