unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Date_returned_to_MFG__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Date_returned_to_MFG__c</fullName>
        <description>Date returned to MFG</description>
        <label>Date returned to Mfg</label>
        <type>Date</type>
    </CustomField>