unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Dateof_Death__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Dateof_Death__c</fullName>
        <description>Date of Death</description>
        <inlineHelpText>Date of Death</inlineHelpText>
        <label>Date of Death</label>
        <type>Date</type>
    </CustomField>