unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Describe_Event__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Describe_Event__c</fullName>
        <description>Describe Event</description>
        <label>Describe Event</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>