unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Device_Age_Units__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Device_Age_Units__c</fullName>
        <label>Device Age Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>