unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Device_Age_with_units__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Device_Age_with_units__c</fullName>
        <formula>Text(CMPL123CME__Approximate_age_of_device__c) &amp; " " &amp; Text(CMPL123CME__Device_Age_Units__c)</formula>
        <label>Device Age (with units)</label>
        <type>Text</type>
    </CustomField>