unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Device_Eval_By_Mfg__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Device_Eval_By_Mfg__c</fullName>
        <inlineHelpText>Device evaluated by Manufacturer</inlineHelpText>
        <label>Unused Device Eval By Mfg</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Returned to Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Evaluation Summary Attached</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>