unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Device_Evaluated_by_Manufacturer__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Device_Evaluated_by_Manufacturer__c</fullName>
        <label>Device Evaluated by Manufacturer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>