unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Device_Evaluation_Addl_Text__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Device_Evaluation_Addl_Text__c</fullName>
        <label>Device Evaluation - Addl Text</label>
        <length>200</length>
        <type>Text</type>
    </CustomField>