unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Device_evaluation_by_manufacturer__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Device_evaluation_by_manufacturer__c</fullName>
        <description>Device evaluation by manufacturer</description>
        <inlineHelpText>Device evaluation by manufacturer</inlineHelpText>
        <label>Device evaluation by manufacturer</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Returned to Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Evaluation Summary Attached</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>