unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Device_mfg_date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Device_mfg_date__c</fullName>
        <label>Device Mfg date</label>
        <type>Date</type>
    </CustomField>