unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Device_Provide_Code__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Device_Provide_Code__c</fullName>
        <inlineHelpText>No (Attach Code to Explain why not) or Provide code</inlineHelpText>
        <label>Device Provide Code</label>
        <length>200</length>
        <type>Text</type>
    </CustomField>