unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Device_ProvideCode__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Device_ProvideCode__c</fullName>
        <description>Device Provide Code</description>
        <inlineHelpText>Device Provide Code</inlineHelpText>
        <label>Device Provide Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01 Device received in a condition which made analysis impossible</fullName>
                </value>
                <value>
                    <fullName>02 Device evaluation anticipated, but not yet begun</fullName>
                </value>
                <value>
                    <fullName>03 Device not made by company</fullName>
                </value>
                <value>
                    <fullName>04 Device problem already known, no evaluation necessary</fullName>
                </value>
                <value>
                    <fullName>81 Other (code unspecified, describe in H10)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>