unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Diagnosis_for_use_1__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Diagnosis_for_use_1__c</fullName>
        <label>Diagnosis for use 1</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>