unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Diagnosis_for_use_2__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Diagnosis_for_use_2__c</fullName>
        <description>Diagnosis for use 2</description>
        <label>Diagnosis for use 2</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>