unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__DOB__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__DOB__c</fullName>
        <description>Date of Birth</description>
        <label>DOB</label>
        <type>Date</type>
    </CustomField>