unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Dose_Freq_Route_1__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Dose_Freq_Route_1__c</fullName>
        <description>Dose/Freq/Route 1</description>
        <label>Dose/Freq/Route 1</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>