unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__E1_Initial_Reporter__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__E1_Initial_Reporter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initial Reporter</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>MDR (E1. Initial Reporter)</relationshipLabel>
        <relationshipName>MDR2</relationshipName>
        <type>Lookup</type>
    </CustomField>