unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Evaluation_Summary_Attached__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Evaluation_Summary_Attached__c</fullName>
        <label>Evaluation Summary Attached</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CMPL123CME__Device_Evaluated_by_Manufacturer__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>