unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Event_abated_stopped_use_1__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Event_abated_stopped_use_1__c</fullName>
        <description>Event abated stopped use 1</description>
        <label>Event abated stopped use 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Does Not Apply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>