unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Event_reappered_with_re_use_2__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Event_reappered_with_re_use_2__c</fullName>
        <description>Event reappered with re-use 2</description>
        <label>Event reappered with re-use 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Does Not Apply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>