unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Exp_Date_1__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Exp_Date_1__c</fullName>
        <label>Exp. Date 1</label>
        <type>Date</type>
    </CustomField>