unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Exp_Date_2__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Exp_Date_2__c</fullName>
        <label>Exp. Date 2</label>
        <type>Date</type>
    </CustomField>