unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Explant_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Explant_Date__c</fullName>
        <description>Explant Date</description>
        <label>Explant Date</label>
        <type>Date</type>
    </CustomField>