unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__F14_Manufacturer__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__F14_Manufacturer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>F14 Manufacturer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MDR (F14 Manufacturer)</relationshipLabel>
        <relationshipName>MDR4</relationshipName>
        <type>Lookup</type>
    </CustomField>