unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__F3_User_Facility__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__F3_User_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>F3. User Facility</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MDR (F3. User Facility)</relationshipLabel>
        <relationshipName>MDR3</relationshipName>
        <type>Lookup</type>
    </CustomField>